# api/urls.py
@@ -1,6 +1,6 @@
 from django.urls import path
 
-from .views import HelloView, LoginView, ProfileView, RegisterView
+from .views import HelloView, LoginView, MessageListCreateView, ProfileView, RegisterView
 
 
 urlpatterns = [
@@ -8,4 +8,5 @@ urlpatterns = [
     path("register/", RegisterView.as_view(), name="register"),
     path("login/", LoginView.as_view(), name="login"),
     path("profile/", ProfileView.as_view(), name="profile"),
+    path("messages/", MessageListCreateView.as_view(), name="messages"),
 ]
